3-ISSUE: Создать тестовое окружение
