# data-management-subsystem/src/main/resources/openapi.yaml
@@ -51,7 +51,7 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
         "400":
           description: BAD REQUEST
           content:
@@ -59,7 +59,15 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
+        "500":
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                type: object
+                oneOf:
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
 
   /product:
     get:
@@ -77,7 +85,7 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
         "400":
           description: BAD REQUEST
           content:
@@ -85,14 +93,22 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
+        "500":
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                type: object
+                oneOf:
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
 
     post:
       requestBody:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Product'
+              $ref: '../../../../openapi.yaml#/components/schemas/Product'
 
       responses:
         "200":
@@ -102,7 +118,7 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
         "400":
           description: BAD REQUEST
           content:
@@ -110,7 +126,15 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
+        "500":
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                type: object
+                oneOf:
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
 
   /feedback:
     post:
@@ -118,7 +142,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Feedback'
+              $ref: '../../../../openapi.yaml#/components/schemas/Feedback'
 
       responses:
         "200":
@@ -128,7 +152,7 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
         "400":
           description: BAD REQUEST
           content:
@@ -136,154 +160,12 @@ paths:
               schema:
                 type: object
                 oneOf:
-                  - $ref: '#/components/schemas/ResultResponse'
-components:
-  schemas:
-    ResultResponse:
-      type: object
-      properties:
-        errorCode:
-          type: integer
-        errorMessage:
-          type: string
-        result:
-          type: object
-          nullable: true
-          oneOf:
-            - $ref: '#/components/schemas/Product'
-            - $ref: '#/components/schemas/SearchResultList'
-
-    Product:
-      type: object
-      properties:
-        id:
-          type: string
-        category:
-          type: object
-          oneOf:
-            - $ref: '#/components/schemas/Category'
-        vendor:
-          type: object
-          oneOf:
-            - $ref: '#/components/schemas/Vendor'
-        name:
-          type: string
-        description:
-          type: string
-        price:
-          type: integer
-        quantity:
-          type: integer
-        saledQuantity:
-          type: integer
-        characteristics:
-          type: array
-          items:
-            $ref: '#/components/schemas/Characteristic'
-        rating:
-          type: integer
-        link:
-          type: string
-        images:
-          type: array
-          items:
-            $ref: '#/components/schemas/Image'
-        feedback:
-          type: array
-          items:
-            $ref: '#/components/schemas/Feedback'
-
-    SearchResultList:
-      type: object
-      properties:
-        total:
-          type: integer
-        page:
-          type: object
-          oneOf:
-            - $ref: '#/components/schemas/Pagination'
-        results:
-          type: array
-          items:
-            $ref: '#/components/schemas/ShortProduct'
-
-    ShortProduct:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        description:
-          type: string
-        price:
-          type: integer
-        quantity:
-          type: integer
-        image:
-          type: object
-          oneOf:
-            - $ref: '#/components/schemas/Image'
-    Category:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-
-    Vendor:
-      type: object
-      properties:
-        id:
-          type: string
-        name:
-          type: string
-        link:
-          type: string
-          nullable: true
-        image:
-          type: object
-          nullable: true
-          oneOf:
-            - $ref: '#/components/schemas/Image'
-
-    Characteristic:
-      type: object
-      properties:
-        name:
-          type: string
-        value:
-          type: string
-        measurement:
-          type: string
-          nullable: true
-
-    Image:
-      type: object
-      properties:
-        id:
-          type: string
-        link:
-          type: string
-
-    Feedback:
-      type: object
-      properties:
-        id:
-          type: string
-        fullName:
-          type: string
-        description:
-          type: string
-
-    Pagination:
-      type: object
-      properties:
-        limit:
-          type: integer
-          minimum: 0
-          maximum: 15
-        offset:
-          type: integer
-          minimum: 0
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
+        "500":
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              schema:
+                type: object
+                oneOf:
+                  - $ref: '../../../../openapi.yaml#/components/schemas/ResultResponse'
